regression_tests/snap/check/teststm2.lst
================================================================================

                          PROGRAM SNAP  Version

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date:


================================================================================
                     Run at 




================================================================================
Regression tests - multiple coordinate files                

                                     ERRORS

================================================================================

Note: 2 errors reported in teststm2.err
